--- a/SwiftPasscodeLock/en.lproj/PasscodeLock.strings
+++ b/SwiftPasscodeLock/en.lproj/PasscodeLock.strings
@@ -27,3 +27,6 @@
 
 /* Touch ID Reason */
 "PasscodeLockTouchIDReason" = "Authentication required to proceed";
+
+/* Touch ID Fallback Button */
+"PasscodeLockTouchIDButton" = "Enter Passcode";
